# Auto_YOLO

./: .env.example  .gitignore  README.md  SESSION_SUMMARY.md  autoyolo.yaml  autoyolo_smoke3.yaml  autoyolo_smoke3_six.yaml  autoyolo_test.yaml  autoyolo_test_digits36.yaml  classes.txt  pyproject.toml
autoyolo/: cli.py  config.py  io_utils.py  models.py  pipeline.py
autoyolo/adapters/: __init__.py  llm_base.py  mock_adapter.py  openai_adapter.py  opencode_adapter.py
autoyolo/services/: autotune.py  plan.py  preannotate.py  qc.py  remote_chat.py  task_profiles.py  vision.py  wizard.py
tasks/: 1.yaml
