[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoyolo"
version = "0.1.0"
description = "CLI scaffold for GPT-assisted auto labeling workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "python-dotenv>=1.0.1",
  "openai>=1.40.0",
  "Pillow>=10.3.0",
  "transformers>=4.43.0",
]

[project.scripts]
autoyolo = "autoyolo.cli:app"

[tool.setuptools]
packages = ["autoyolo", "autoyolo.adapters", "autoyolo.services"]
